# open-standardizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  stereo_export.py  stereo_validation.py
cmake/: FindRDKit.cmake
open_standardizer/: __init__.py  chemaxon_canonical.py  cluster_env.py  cpu_ops.py  cx_bridge.py  enhanced_smiles.py  gpu_cpu_policy_manager.py  gpu_ops.py  openstandardizer.py  standardize.py  standardizer_loader.py  stereo_export.py  xml_loader.py
open_standardizer/gpu/: __init__.py
open_standardizer/tests/: standardize_cli.py
rdkit_fallback_engine/: manager.py
src/cpu/: standardize_rdkit.py
src/gpu/: bond_infer.cu  core_ops.cu  core_ops_batch.cpp  gpu_structs.hpp  kernels.cu  mesomerizer.cu  standardize_bindings.cpp  stereo.cu  tautomer_motif_tags.cpp  tautomer_motif_tags.hpp  tautomerize.cu
tests/: stereo_diff_cli.py
