[build-system]
requires = [
  "scikit-build-core>=0.9",
  "setuptools>=69",
  "wheel",
  "pybind11>=2.10",
]
build-backend = "scikit_build_core.build"

[project]
name = "open-standardizer"
version = "0.1.0"
description = "ChemAxon-style molecular standardization using MolVS/RDKit + optional CUDA acceleration."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
classifiers = [
    "License :: OSI Approved :: BSD License",
]

authors = [
  { name = "Luke Czapla", email = "czaplaluke@gmail.com" }
]

# If you’re installing RDKit from PyPI:
dependencies = [
  # Requires RDKit (C++ and Python) to be installed on the system from pip (latest 2025/2026 version) or github
]

[project.optional-dependencies]
gpu = [
  # CUDA toolkit / driver is assumed to be installed on the system.
]

[project.urls]
homepage = "https://github.com/lukeczapla/open-standardizer"
repository = "https://github.com/lukeczapla/open-standardizer.git"

[tool.scikit-build]
build-dir = "build"
minimum-version = "0.9"

[tool.scikit-build.cmake]
build-type = "Release"

[tool.scikit-build.wheel]
expand-macos-universal-tags = true

